--- a/ReBoot.vcxproj
+++ b/ReBoot.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -82,12 +82,13 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\glut-3.7.6\include\GL;..\fbx-sdk\include;..\freeimage\include;model\include;physics\include;shading\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\glfw\include;..\fbx-sdk\include;..\freeimage\include;model\include;physics\include;shading\include</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <MinimalRebuild>false</MinimalRebuild>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>FreeImage.lib;libfbxsdk-md.lib;glew32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\glew-1.9.0\lib\x64;..\glut-3.7.6\lib\x64;..\fbx-sdk\lib\debug;..\freeimage\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>FreeImage.lib;libfbxsdk-md.lib;glfw3.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\glfw\lib;..\fbx-sdk\lib\debug;..\freeimage\lib%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
@@ -111,14 +112,14 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>..\glut-3.7.6\include\GL;..\fbx-sdk\include;..\freeimage\include;model\include;physics\include;shading\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\glfw\include;..\fbx-sdk\include;..\freeimage\include;model\include;physics\include;shading\include</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>FreeImage.lib;libfbxsdk-md.lib;glew32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\glew-1.9.0\lib\x64;..\glut-3.7.6\lib\x64;..\fbx-sdk\lib\release;..\freeimage\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>FreeImage.lib;libfbxsdk-md.lib;glfw3.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\glfw\lib;..\fbx-sdk\lib\release;..\freeimage\lib</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
@@ -153,6 +154,7 @@
     <ClInclude Include="model\include\UpdateInterface.h" />
     <ClInclude Include="model\include\VBO.h" />
     <ClInclude Include="model\include\Vector4.h" />
+    <ClInclude Include="model\include\VectorUtil.h" />
     <ClInclude Include="model\include\ViewManager.h" />
     <ClInclude Include="model\include\ViewManagerEvents.h" />
     <ClInclude Include="physics\include\Cube.h" />
@@ -175,6 +177,7 @@
     <ClInclude Include="shading\include\StaticShader.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="glfw\src\gl3w.c" />
     <ClCompile Include="model\src\AnimatedModel.cpp" />
     <ClCompile Include="model\src\Animation.cpp" />
     <ClCompile Include="model\src\AnimationBuilder.cpp" />
