Improved shader uniform handling
Created a uniform class that gathers all the uniforms in a shader and
stores them in the shader class object.  A uniform function takes in a
void pointer and gets cast to the actual type using the uniform info
stored in the shader object!  Still need to change the compute shaders
to this paradigm.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,6 +131,10 @@ add_executable(ReBoot
 
 target_compile_features(ReBoot PRIVATE cxx_range_for)
 
+if (MSVC)
+    add_definitions("/MP")
+endif()
+
 target_link_libraries(ReBoot legacy_stdio_definitions.lib)
 target_link_libraries(ReBoot ${CMAKE_SOURCE_DIR}/libs/FreeImage/lib/FreeImage.lib)
 target_link_libraries(ReBoot ${CMAKE_SOURCE_DIR}/libs/glfw/lib/glfw3.lib)
