--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,6 +86,8 @@ FILE(GLOB SCREENSPACE_HEADER_FILES ${CMAKE_SOURCE_DIR}/screenspace/include/*.h)
 FILE(GLOB TEXTURE_HEADER_FILES     ${CMAKE_SOURCE_DIR}/texture/include/*.h)
 FILE(GLOB IO_HEADER_FILES 		   ${CMAKE_SOURCE_DIR}/io/include/*.h)
 FILE(GLOB LIGHTS_HEADER_FILES 	   ${CMAKE_SOURCE_DIR}/lights/include/*.h)
+FILE(GLOB SHADER_FILES 	   		   ${CMAKE_SOURCE_DIR}/shading/shaders/*)
+
 
 FILE(GLOB MODEL_SRC_FILES       ${CMAKE_SOURCE_DIR}/model/src/*.cpp)
 FILE(GLOB PHYSICS_SRC_FILES     ${CMAKE_SOURCE_DIR}/physics/src/*.cpp)
@@ -116,6 +118,7 @@ source_group("screenspace" FILES ${SCREENSPACE_HEADER_FILES} ${SCREENSPACE_SRC_F
 source_group("texture"     FILES ${TEXTURE_HEADER_FILES} ${TEXTURE_SRC_FILES})
 source_group("io"          FILES ${IO_HEADER_FILES} ${IO_SRC_FILES})
 source_group("lights"      FILES ${LIGHTS_HEADER_FILES} ${LIGHTS_SRC_FILES})
+source_group("shaders"     FILES ${SHADER_FILES})
 
 add_executable(ReBoot
     # WIN32
@@ -145,7 +148,8 @@ add_executable(ReBoot
 				${IO_HEADER_FILES}
 				${IO_SRC_FILES}
 				${LIGHTS_HEADER_FILES}
-				${LIGHTS_SRC_FILES})
+				${LIGHTS_SRC_FILES}
+				${SHADER_FILES})
 
 target_compile_features(ReBoot PRIVATE cxx_range_for)
 
